--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,11 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/dusadrian/universe
 	shallow = true
 	branch = HEAD
 [submodule "admisc"]
 	path = admisc
 	url = https://github.com/dusadrian/admisc
-	shallow = true
-	registered = true
-[submodule "DDIwR"]
-	path = DDIwR
-	url = https://github.com/dusadrian/ddiwr
 	shallow = true
 	registered = true
 [submodule "declared"]
@@ -21,5 +16,15 @@
 [submodule "venn"]
 	path = venn
 	url = https://github.com/dusadrian/venn
+	shallow = true
+	registered = true
+[submodule "DDIwR"]
+	path = DDIwR
+	url = https://github.com/dusadrian/DDIwR
+	shallow = true
+	registered = true
+[submodule "statistics"]
+	path = statistics
+	url = https://github.com/dusadrian/statistics
 	shallow = true
 	registered = true
