--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,9 @@
 [submodule "DDIwR"]
 	path = DDIwR
 	url = https://github.com/dusadrian/DDIwR
+[submodule "QCA"]
+	path = QCA
+	url = https://github.com/dusadrian/testthat_QCA
 [submodule "admisc"]
 	path = admisc
 	url = https://github.com/dusadrian/admisc
